--- a/index.html
+++ b/index.html
@@ -8,43 +8,82 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <link rel="shortcut icon" href="icon.png" type="image/png">
+        <meta property="og:image" content="potapova.jpg">
+        <meta property="og:image:width" content="350">
+        <meta property="og:image:height" content="466">
         <title>Надя-сан из села Медведь</title>
     </head>
     <body style="background:#e4e4e4;">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="">Надя-сан из села Медведь (С.Потапова)</a>
-            </div>
-            <!-->
-            <div class="container">
-                <a class="navbar-brand" href=""></a>
-            </div>
-            <!-->
-        </nav>
-
+      <!-- -->
+      <div class="shapka">
+        <h1>Надя-сан из села медведь <wbr>(С.Потапова)</h1>
+      </div>
+      <!-- -->
+      <div>
+        <div class="section">
+          <hh>Сюжет романа</hh>
+        </div>
+        <div class="textsection">
+          <p><span>М</span>ы уже работаем нам этим :)
+            Мы уже работаем над этим :)
+            Мы уже работаем над этим :)
+            Мы уже работаем над этим :)
+            Мы уже работаем над этим :)</p>
+        </div>
+      </div>
+      <!-- -->
         <div>
-          <div class="section" style="margin-bottom: 0px;">
-            <h1>Проблематика романа</h1>
+          <div class="section">
+            <hh>Проблематика романа</hh>
           </div>
           <div class="textsection">
-            <p><span>С</span>коро здесь точно что-то будет, ждите :)
-              Сайт находится в процессе разработки неопытных лап!
-              Скоро здесь точно что-то будет, ждите :)
-              Сайт находится в процессе разработки неопытных лап!</p>
+            <p><span>М</span>ы уже работаем нам этим :)
+              Мы уже работаем над этим :)
+              Мы уже работаем над этим :)
+              Мы уже работаем над этим :)
+              Мы уже работаем над этим :)</p>
           </div>
         </div>
-
+        <!-- -->
         <div>
-          <div class="section" style="margin-bottom: 0px;">
-            <h1>Главные герои</h1>
+          <div class="section">
+            <hh>Главные герои</hh>
           </div>
           <div class="textsection">
-            <p><span>С</span>коро здесь точно что-то будет, ждите :)
-              Сайт находится в процессе разработки неопытных лап!
-              Cкоро здесь точно что-то будет, ждите :)
-              Сайт находится в процессе разработки неопытных лап!</p>
+            <p><span>М</span>ы уже работаем нам этим :)
+              Мы уже работаем над этим :)
+              Мы уже работаем над этим :)
+              Мы уже работаем над этим :)
+              Мы уже работаем над этим :)</p>
           </div>
         </div>
-
+        <!-- -->
+        <div>
+          <div class="section">
+            <hh>Роман в полном содержании</hh>
+          </div>
+          <div class="textsection" style="margin-bottom: 10px">
+            <div style="padding: 0px 0px 10px 0px">
+              <a href="Надя-сан из села Медведь.pdf" title="Скачать этот файл" class="file link trackable" data-id="47855869" data-category="Download" data-action="Doc">
+                <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь</hh>
+              </a>
+            </div>
+            <div style="padding: 0px;">
+              <a href="Надя-сан из села Медведь(авторский).pdf" title="Скачать этот файл" class="file link trackable" data-id="47855869" data-category="Download" data-action="Doc">
+                <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь(авторский)</hh>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!---->
+        <!--div class="row">
+          <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12" style="background-color: #cdcdcd; padding: 5px; text-align: center; margin: 0px 20px 10px 10px; border-radius: 10px; color: #f0f0f0;">
+            <p>Достааааааточно длинный тееееееееекст</p>
+          </div>
+          <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12" style="background-color: #cdcdcd; padding: 5px; text-align: center; margin: 0px 20px 10px 10px; border-radius: 10px; color: #f0f0f0;">
+            <p>Достааааааточно длинный тееееееееекст</p>
+          </div>
+        </div!-->
     </body>
 </html>
