--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </a>
             </div>
             <div style="padding: 0px;">
-              <a href="Надя-сан из села Медведь(авторский).pdf" title="Скачать этот файл" class="file link trackable" data-id="47855869" data-category="Download" data-action="Doc">
+              <a href="Надя-сан из села Медведь_авторский.pdf" title="Скачать этот файл" class="file link trackable" data-id="47855869" data-category="Download" data-action="Doc">
                 <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь(авторский)</hh>
               </a>
             </div>
