--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
           </div>
           <div class="textsection" style="margin-bottom: 10px">
             <div style="padding: 0px 0px 10px 0px">
-              <a href="Надя-сан из села Медведь.pdf" title="Скачать этот файл" class="file link trackable" data-id="47855869" data-category="Download" data-action="Doc">
+              <a href="Надя-сан из села Медведь.pdf" title="Надя-сан из села Медведь.pdf" class="file link trackable" data-id="0" data-category="Download" data-action="Doc">
                 <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь</hh>
               </a>
             </div>
             <div style="padding: 0px;">
-              <a href="Надя-сан из села Медведь_авторский.pdf" title="Скачать этот файл" class="file link trackable" data-id="47855869" data-category="Download" data-action="Doc">
+              <a href="Надя-сан из села Медведь_авторский.pdf" title="Надя-сан из села Медведь.pdf" class="file link trackable" data-id="1" data-category="Download" data-action="Doc">
                 <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь(авторский)</hh>
               </a>
             </div>
