--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <hh>Сюжет романа</hh>
         </div>
         <div class="textsection">
-          <p><span>М</span>ы уже работаем нам этим :)
+          <p><span>М</span>ы уже работаем над этим :)
             Мы уже работаем над этим :)
             Мы уже работаем над этим :)
             Мы уже работаем над этим :)
@@ -38,7 +38,7 @@
             <hh>Проблематика романа</hh>
           </div>
           <div class="textsection">
-            <p><span>М</span>ы уже работаем нам этим :)
+            <p><span>М</span>ы уже работаем над этим :)
               Мы уже работаем над этим :)
               Мы уже работаем над этим :)
               Мы уже работаем над этим :)
@@ -51,7 +51,7 @@
             <hh>Главные герои</hh>
           </div>
           <div class="textsection">
-            <p><span>М</span>ы уже работаем нам этим :)
+            <p><span>М</span>ы уже работаем над этим :)
               Мы уже работаем над этим :)
               Мы уже работаем над этим :)
               Мы уже работаем над этим :)
