--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body style="background:#e4e4e4;">
       <!-- -->
       <div class="shapka">
-        <h1>Надя-сан из села медведь <wbr>(С.Потапова)</h1>
+        <h1>Надя-сан из села Медведь <wbr>(С.Потапова)</h1>
       </div>
       <!-- -->
       <div>
