--- a/index.html
+++ b/index.html
@@ -9,15 +9,79 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <link rel="shortcut icon" href="icon.png" type="image/png">
+        <meta property="og:image" content="potapova.jpg">
+        <meta property="og:image:width" content="350">
+        <meta property="og:image:height" content="466">
         <title>Надя-сан из села Медведь</title>
     </head>
     <body style="background:#e4e4e4;">
       <!-- -->
       <div class="shapka">
-        <h1>Надя-сан из села Медведь <wbr>(С.Потапова)</h1>
+        <h1>Надя-сан из села медведь <wbr>(С.Потапова)</h1>
       </div>
       <!-- -->
-      
+      <!--div>
+        <div class="section">
+          <hh>Сюжет романа</hh>
+        </div>
+        <div class="textsection">
+          <p><span>М</span>ы уже работаем над этим :)
+            Мы уже работаем над этим :)
+            Мы уже работаем над этим :)
+            Мы уже работаем над этим :)
+            Мы уже работаем над этим :)</p>
+        </div>
+      </div-->
+      <!-- -->
+        <div>
+          <div class="section">
+            <hh>Проблематика романа</hh>
+          </div>
+          <div class="textsection" style="padding-top: 0px;">
+            <div class="zagol">
+              <hh1>Список проблем</hh1>
+            </div>
+            <p>1. Проблема толерантности <wbr>(терпимого отношения к людям)
+              2. Проблема войны и мира <wbr>(причин войны, ее сути)
+              3. Проблема милосердия, гуманности и человечности
+              4. Проблема человек и общество
+              5. Проблема различия культур</p>
+            <!--
+            <div class="zagol">
+              <hh1>1. Проблема толерантности</hh1>
+            </div>
+            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
+            <div class="zagol">
+              <hh1>2. Проблема войны и мира</hh1>
+            </div>
+            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
+            <div class="zagol">
+              <hh1>3. Проблема милосердия, гуманности и человечности</hh1>
+            </div>
+            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
+            <div class="zagol">
+              <hh1>4. Проблема человек и общество</hh1>
+            </div>
+            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
+            <div class="zagol">
+              <hh1>5. Проблема различия культур</hh1>
+            </div>
+            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
+            -->
+          </div>
+        </div>
+        <!-- -->
+        <div>
+          <div class="section">
+            <hh>Главные герои</hh>
+          </div>
+          <div class="textsection">
+            <p>Надежда Карпова
+              Хигаки Масакадзу
+              Александра Орлова
+              </p>
+          </div>
+        </div>
         <!-- -->
         <div>
           <div class="section">
@@ -26,14 +90,14 @@
           <div class="textsection" style="margin-bottom: 10px">
             <div style="padding: 0px 0px 10px 0px">
               <a href="Надя-сан из села Медведь.pdf" title="Надя-сан из села Медведь.pdf" class="file link trackable" data-id="0" data-category="Download" data-action="Doc">
-                <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь</hh>
+                <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь.pdf</hh>
               </a>
             </div>
-            <div style="padding: 0px;">
+            <!--div style="padding: 0px;">
               <a href="Надя-сан из села Медведь_авторский.pdf" title="Надя-сан из села Медведь.pdf" class="file link trackable" data-id="1" data-category="Download" data-action="Doc">
                 <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь(авторский)</hh>
               </a>
-            </div>
+            </div-->
           </div>
         </div>
         <!---->
