--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             <div class="zagol">
               <hh1>Список проблем</hh1>
             </div>
-            <p>1. Проблема толерантности <wbr>(терпимого отношения к людям)
-              2. Проблема войны и мира <wbr>(причин войны, ее сути)
-              3. Проблема милосердия, гуманности и человечности
-              4. Проблема человек и общество
-              5. Проблема различия культур</p>
-            <!--
-            <div class="zagol">
+            <p><span></span>1. Проблема толерантности <wbr>(терпимого отношения к людям)
+              <span></span>2. Проблема войны и мира <wbr>(причин войны, ее сути)
+              <span></span>3. Проблема милосердия, гуманности и человечности
+              <span></span>4. Проблема человек и общество
+              <span></span>5. Проблема различия культур</p>
+
+            <!-- <div class="zagol">
               <hh1>1. Проблема толерантности</hh1>
             </div>
             <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
@@ -67,7 +67,8 @@
               <hh1>5. Проблема различия культур</hh1>
             </div>
             <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
-            -->
+          -->
+
           </div>
         </div>
         <!-- -->
@@ -76,16 +77,20 @@
             <hh>Главные герои</hh>
           </div>
           <div class="textsection">
-            <p>Надежда Карпова
-              Хигаки Масакадзу
-              Александра Орлова
+            <p><span></span><strong>Надежда Карпова</strong> (Надя-сан), учительница сельской школы.
+              <span></span><strong>Хигаки Масакадзу</strong>, русскоговорящий японский военнопленный.
+              <span></span><strong>Анастасья Яковлевна</strong> (Настенька), член высшего общества Медведя.
+              <span></span><strong>Митяй</strong>, старый друг Нади.
+              <span></span><strong>Гаврилины Козьма Михалыч</strong> и <strong>Мария Евграфовна</strong>, миллионеры, хозяева самого богатого дома в селе.
+              <span></span><strong>Тришка</strong>, городской бедняк, негативно относящийся к японцам.
+              <span></span><strong>Катерина Курочкина</strong>, девушка с непростой судьбой и статусом "порочной" в обществе.
               </p>
           </div>
         </div>
         <!-- -->
         <div>
           <div class="section">
-            <hh>Роман в полном содержании</hh>
+            <hh>Роман в полном содержании <br>(читаетя за 2,5 часа)</hh>
           </div>
           <div class="textsection" style="margin-bottom: 10px">
             <div style="padding: 0px 0px 10px 0px">
@@ -100,14 +105,50 @@
             </div-->
           </div>
         </div>
-        <!---->
-        <!--div class="row">
-          <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12" style="background-color: #cdcdcd; padding: 5px; text-align: center; margin: 0px 20px 10px 10px; border-radius: 10px; color: #f0f0f0;">
-            <p>Достааааааточно длинный тееееееееекст</p>
+        <div>
+          <div class="section">
+            <hh>Роман в кратком содержании <br>(читаетя за 15 минут)</hh>
           </div>
-          <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12" style="background-color: #cdcdcd; padding: 5px; text-align: center; margin: 0px 20px 10px 10px; border-radius: 10px; color: #f0f0f0;">
-            <p>Достааааааточно длинный тееееееееекст</p>
+          <div class="textsection" style="padding-top: 0px;">
+            <div class="zagol">
+              <hh1>Часть 1</hh1>
+            </div>
+            <p><span></span>Действие романа происходят в селе Медведь Новгородской губернии, в годы русско-японской войны. Начинается он с того, что в село привозят японских военнопленных - важное событие для медведцев, никогда до этого не видивших японцев. До этого момента все в селе считали их "мартышками с хвостами". Пленных поселили в Аракчеевских казармах.
+              <span></span>На углу улицы Милионной расположен самый богатый дом села - дом Гаврилина Козьмы Михалыча. В нем собралась вся знать села Медведь: сам Козьма, его жена  Мария Евграфовна, их сын Максим Козьмич, Софья Афанасьевна, Владимир Самойлов, его жена Анастасья Яковлевна и приказчик Кайдаков - они обсуждали свежие новости села, высказывая различные мнения о японских пленных.
+              <span></span>Самойлов принес письмо русского солдата, взятого плен в Японии. В письме говорилось о том, что солдат поразился международным правилам отношения к пленным по Гаакской конвенции, принятым в Японии, тому как японцы уважают своего русского противника. В противовес этому, Козьма Михалыч высказывает свое недовольство русско-японскими отношениями.
+              <span></span>Дальше рассказывается историю вольного крестьянина Евдохина, переехавшего сюда из Эстляндии: Его дом с большим яблочным садом располагался возле школы. Дети постоянно воровали яблоки из этого сада,чем он был очень этим недоволен.
+              <span></span>В вечер приезда пленных многие медведцы вышли на улицы села. Пятеро японцев также вышли на прогулку. Тришка, житель села медведь, негативно относившийся к пленным, начал приставать к ним, обзывая и крича на них. На защиту пленным пришла учительница Карпова Надежда Васильевна, прогнав Тришку. Один из пленных - Хигаки Масакадзу - подошел к ней поблагодарить за помощь. Так они и познакомились. Хигаки был единственным русскоговорящим японцем среди пленных.
+              <span></span>В субботний вечер в трактире Белова оказалось немного народу. Среди его гостей сегодня были учитель Калядин и страховой агент Голоктионов. После долгих бесед им на ум пришла идея открыть свой театр. Позже Надежда Васильевна также присоединится к их деятельности. Первую пьесу, которую они решили потавить - "Бедность - не порок" Островского
+              <span></span>В один из вечеров Надежда Васильевна пришла к Катерине Курочкиной. Дальше описывается судьба Катерины: в 16 лет оставшись без отца с матерью, родила без мужа. По селу пошла молва об ее "порочности". Люди осуждали ее - это же отношение передалось к ее дочке, которую дети всячески старались избегать. Надежда Васильевна, увидев в Катерине образ схожий с главной героиней пьесы Островского, решила предложить ей главную роль. Та, после долгих колебаний, согласилась ради своей дочери.
+              <span></span>Дети сельчан сдружились с японцами и стали играть с ними в бейсбол и пускать воздушного змея. В очередной раз когда дети пролезли в сад Евдохина, калитка сада не выдержала и один из мальчиков, Прошка, проколол себе обе руки. В медведской больнице не было хирурга и поэтому его полажили в лазарет - здание при Аракчеевских казармах, в котором лечили японских военнопленных. Через несколько дней Прошку пришел навестить Захарка, чтобы рассказать плохую новость - отец Прошки погиб на войне.
+              <span></span>Обезумев от горя, мальчик пытается напасть на японца, который лежит рядом с ним, но, из-за того, что японец не в состоянии защищаться, Прошка передумывает и бежит из лазарета к реке. Мальчик пытается утопиться (его руки еще не зажили и грести он ими не может), это замечает Хигаки, но не предпринимает попыток спасти его, так как в японской культуре самоубийство - осознанный выбор человека, которому не стоит препятствовать. Мальчика спасает Митяй Поликапов.
+              <span></span>Узнав, о бездействии Хигаки, Надежда Васильевна разочаровывается в нем и прекращает с ним общение, одновременно с этим она уважает поступок Митяя и между ними (старыми друзьями) завязывается общение. Они обсуждают статью Вольтера, а также рассуждают о причинах и смысле войны. Они приходят к выводу, что все это бессмысленное кровопролитие происходит из-за жалких кусков земли. Статья, с которой Надя познакомила Митяя, очень его заинтересовала и герой попросил дать ее почитать.
+              <span></span>Случается неслыханное - бедняк Тришка напал на миллионера Козьму Михалыча. Причиной конфликта стала эксплуатация работников Козьмой Михалычем(так думал Тришка). Козьма Михалыч высказывается о том, что он все свое состояние заработал своим трудом и что люди неправы, думая, что он диктатор и тиран. После своей речи Козьма умирает от горя.</p>
+            <div class="zagol">
+              <hh1>Часть 2</hh1>
+            </div>
+            <p><span></span>Митя, в руках которого находятся тетрадки и записи Нади, читает ее записки.
+
+              <strong>НЕДООЩУЩЕНИЕ</strong>
+              <span></span>В этой записке Надя рассуждает о том, что есть красота и как люди должны относиться к живой природе.
+
+              <strong>БЕЛАЯ НОЧЬ</strong>
+              <span></span>Надя сравнивает русского и японского мужчин и приходит к мысли о том, что японцы обладают душой, которой не обладают русские мужики.
+
+              <strong>ЧУЖОЙ ОГОРОД</strong>
+              <span></span>Описывается разговор Хигаки и Нади, которые сравнивают дележ земли между соседями с войной, после чего приходят к выводу о том, что лучше бы государства делились опытом друг с другом и учились на примерах друг друга.
+
+              <strong>БЕЛОЕ И КРАСНОЕ</strong>
+              <span></span>Надя узнает все больше узнает о японских традициях и говорит о них в записке.
+
+              <span></span>Надя узнает, что Митя прочитал не только статью, но и эти очень личные записки. Она с ним ссорится. Митяй уходит на войну.
+              <span></span>В это время в селе Медведь начинается премьера первого спектакля. Она прошла очень успешной. Самым главым результатом этого события было изменение отношения односельчан к Катерине Курочкиной. Они поняли, что беспричинно повесили на нее ярлык.
+              <span></span>Позже, Надя встречает Хигаки, который объясняет ей причину его бездействий, когда Прошка пытался утопиться. Надя все понимает и прощает его. У нее к нему есть чувства, но она их скрывает. Также говорится о том, что Катерина с Кавабатой часто видятся (они друг другу небезразличны).
+              <span></span>Наступает день ангела и все дарят Наде подарки. Хигаки сыграл ей на самодельном японском инструменте под окном ее школьного кабинета во время урока - это традиционный японский подарок. Выясняется, что Анастасья Яковлевна влюблена в одного из японцев, хотя уже и состоит замужем. Позже ее муж узнает об этом и они ссорятся.
+              <span></span>Рассказывается о событии на войне - о том, что Порт-Артур сдался Японии после 11 месяцев обороны - мнения по поводу правильности действий русского командования порта разделились. Одни считали, что сохранение жизни 24 тысяч человек было важнее, другие считали, что важнее борьба до последней капли крови.
+              <span></span>С фронта возвращается Митяй. Это был «обрубок человеческого тела без рук и ног» - их он потерял на войне. Надя берет на себя заботу о нем.
+              <span></span>В село привезли еще пленных. Вместе с некоторыми пленными добровольно приехали их жены. Умирает один из военнопленных - Кавабата - другие японцы хоронят его на кладбище и ставят ему большой камень с выбитым на нем именем. Перед смертью Кавабата, по традиции японских самураев, пишет Катерине стих. Митяй умрет через несколько дней. Война подходит к концу. Японцы собираются возвращаться домой. Хигаки дарит Наде самодельный веер с надписью «Не забудьте меня. Госпожъ Надъ на добрую память отъ Хигаки». «Хигаки всегда понимал Надю душою, без словесных объяснений. Это было прощание.»</p>
           </div>
-        </div!-->
+        </div>
     </body>
 </html>
