--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <hh>Проблематика романа</hh>
           </div>
           <div class="textsection" style="padding-top: 0px;">
-            <div class="zagol">
+            <div class="zagol" style="margin-bottom: 12px;">
               <hh1>Список проблем</hh1>
             </div>
             <p><span></span>1. Проблема толерантности <wbr>(терпимого отношения к людям)
