--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <div class="section">
             <hh>Проблематика романа</hh>
           </div>
-          <div class="textsection" style="padding-top: 0px;">
-            <div class="zagol" style="margin-bottom: 12px;">
+          <div class="textsection" style="padding-top: 0px; padding-bottom: 15px;">
+            <div class="zagol" style="margin-bottom: 15px;">
               <hh1>Список проблем</hh1>
             </div>
             <p><span></span>1. Проблема толерантности <wbr>(терпимого отношения к людям)
