--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <hh>Проблематика романа</hh>
           </div>
           <div class="textsection" style="padding-top: 0px; padding-bottom: 15px;">
-            <div class="zagol" style="margin-bottom: 15px;">
+            <!--div class="zagol" style="margin-bottom: 15px;">
               <hh1>Список проблем</hh1>
-            </div>
+            </div-->
             <p><span></span>1. Проблема толерантности <wbr>(терпимого отношения к людям)
               <span></span>2. Проблема войны и мира <wbr>(причин войны, ее сути)
               <span></span>3. Проблема милосердия, гуманности и человечности
