--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="section">
             <hh>Проблематика романа</hh>
           </div>
-          <div class="textsection" style="padding-top: 0px; padding-bottom: 15px;">
+          <div class="textsection">
             <!--div class="zagol" style="margin-bottom: 15px;">
               <hh1>Список проблем</hh1>
             </div-->
