--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <link rel="shortcut icon" href="icon.png" type="image/png">
-        <meta property="og:image" content="potapova.jpg">
+        <meta property="og:image" content="nadya.jpg">
         <meta property="og:image:width" content="350">
         <meta property="og:image:height" content="466">
         <title>Надя-сан из села Медведь</title>
