update (last was 2 years ago)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-5651043431419309",
-            enable_page_level_ads: true
-          });
-        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
@@ -22,63 +15,21 @@
         <title>Надя-сан из села Медведь</title>
     </head>
     <body style="background:#e4e4e4;">
-      <!-- -->
       <div class="shapka">
         <h1>Надя-сан из села медведь <wbr>(С.Потапова)</h1>
       </div>
-      <!-- -->
-      <!--div>
-        <div class="section">
-          <hh>Сюжет романа</hh>
-        </div>
-        <div class="textsection">
-          <p><span>М</span>ы уже работаем над этим :)
-            Мы уже работаем над этим :)
-            Мы уже работаем над этим :)
-            Мы уже работаем над этим :)
-            Мы уже работаем над этим :)</p>
-        </div>
-      </div-->
-      <!-- -->
         <div>
           <div class="section">
             <hh>Проблематика романа</hh>
           </div>
           <div class="textsection">
-            <!--div class="zagol" style="margin-bottom: 15px;">
-              <hh1>Список проблем</hh1>
-            </div-->
             <p><span></span>1. Проблема толерантности <wbr>(терпимого отношения к людям)
               <span></span>2. Проблема войны и мира <wbr>(причин войны, ее сути)
               <span></span>3. Проблема милосердия, гуманности и человечности
               <span></span>4. Проблема человек и общество
               <span></span>5. Проблема различия культур</p>
-
-            <!-- <div class="zagol">
-              <hh1>1. Проблема толерантности</hh1>
-            </div>
-            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
-            <div class="zagol">
-              <hh1>2. Проблема войны и мира</hh1>
-            </div>
-            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
-            <div class="zagol">
-              <hh1>3. Проблема милосердия, гуманности и человечности</hh1>
-            </div>
-            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
-            <div class="zagol">
-              <hh1>4. Проблема человек и общество</hh1>
-            </div>
-            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
-            <div class="zagol">
-              <hh1>5. Проблема различия культур</hh1>
-            </div>
-            <p>Что-то очень интересное, полезное и познавательное про данную проблему :D</p>
-          -->
-
           </div>
         </div>
-        <!-- -->
         <div>
           <div class="section">
             <hh>Главные герои</hh>
@@ -105,11 +56,11 @@
                 <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь.pdf</hh>
               </a>
             </div>
-            <!--div style="padding: 0px;">
+            <div style="padding: 0px;">
               <a href="Надя-сан из села Медведь_авторский.pdf" title="Надя-сан из села Медведь.pdf" class="file link trackable" data-id="1" data-category="Download" data-action="Doc">
                 <hh style="text-align: left; font-size: 170%">Надя-сан из села Медведь(авторский)</hh>
               </a>
-            </div-->
+            </div>
           </div>
         </div>
         <div>
